# hybridocr

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_website  build_backend.sh  build_website.sh  manage.py  package-lock.json  package.json  pyproject.toml  website_req.txt
backend/: package.json  settings.py  urls.py
backend/src/: server.ts
backend/static/: index.html
copy/: provision.sh  sudoers
frontend/: package-lock.json  package.json
frontend/src/: App.js  MatrixDisplay.js  core.js  index.ts  matrixGenerator.js
handwriting_generator/: asgi.py  settings.py  urls.py  wsgi.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  ingress.yaml  service.yaml
hybridocr/: core.py  engine.py  generate.py  main.py
k8s/: deploy_traefik.sh  traefik-no-www.yaml  traefik-tlsstore.yaml  traefik-values.yaml  vault-values.yaml  website.yaml
ml/: core.py  engine.py  generate.py  main.py  prepare.py
script/: Dockerfile_training  Dockerfile_website  build_website.sh  deploy_traefik.sh  deploy_website.sh  run.sh
tests/: __init__.py  test_generate.py  test_test.py
tests/file/: JWST-002.json
tests/test_website/: test_common.py  test_dao.py  test_dbhelper.py  test_gmail.py  test_gocr.py  test_hcvault.py  test_website.py
website/: Dockerfile  apiv1.py  cli.py  common.py  dao.py  dbhelper.py  gmail.py  gocr.py  hcvault.py  middleware.py  package-lock.json  package.json  rdhelper.py  requirements.txt  server.py  session.py  settings.py  tsconfig.json  urls.py  util.py
website/backend/: jest.config.js  package-lock.json  package.json  tsconfig.json
website/backend/src/: backend.ts  server.ts
website/backend/tests/: backend.test.ts  test.backend.ts
website/common/: package-lock.json  package.json  tsconfig.json
website/common/src/: common.ts  core.ts  gcp.ts
website/frontend/: index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
website/src/: server.ts
website/templates/: _banner.html  _footer.html  _header.html  _navbar.html  _template.html  about.html  check-your-email.html  index.html  register.html  tryitout.html  upload.html
(+17 files in other folders)
