[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hybridocr"
version = "0.1.0"
description = "A brief description of your package"
authors = [{name = "Your Name", email = "you@example.com"}]
## hatch dep show requirements | xargs -l pip install
dependencies = [
    "cbor2==5.6.2",
    "matplotlib==3.8.3",
    "numpy==1.26.4",
    "Pillow==9.5.0",
    "PyMuPDF==1.24.0",
    "tensorflow==2.16.1",
    "tqdm==4.66.2",
    "sympy==1.12",
]

[tool.hatch.metadata]
# Additional hatch-specific configuration goes here

[project.scripts]
hybridocr = "hybridocr.main:main"
