[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hybridocr"
version = "0.1.0"
description = "A brief description of your package"
authors = [{name = "Your Name", email = "you@example.com"}]
## hatch dep show requirements | xargs -l pip install
dependencies = [
    ## engine
    "tensorflow>=2.15.0",
    "cbor2==5.6.2",
    "matplotlib>=3.7.5",
    "numpy>=1.23.5",
    "Pillow==9.5.0",
    "PyMuPDF==1.24.0",
    "tqdm==4.66.2",
    "sympy==1.12",
    ## website
    "fastapi[all]>=0.115.0",
    "uvicorn>=0.31.0",
    "jinja2>=3.1.4",
    "motor>=3.6.0",
    "redis>=5.1.1",
]

[tool.hatch.metadata]
# Additional hatch-specific configuration goes here

[project.scripts]
hybridocr = "hybridocr.main:main"
